Fix sizing of table on small vertical devices

--- a/src/routes/a-fox-like-me/AFoxLikeMe.scss
+++ b/src/routes/a-fox-like-me/AFoxLikeMe.scss
@@ -162,13 +162,13 @@ table {
 
   td {
     &.fox-id {
-      max-width: 75px;
-      min-width: 75px;
+      max-width: calc(min(75px, 25%) - 25px);
+      min-width: calc(min(75px, 25%) - 25px);
     }
 
     &.fox-name {
-      max-width: 250px;
-      min-width: 250px;
+      max-width: min(30vw, 250px);
+      min-width: min(30vw, 250px);
     }
 
     &.similarity {
